@startuml


class Protoss{
    - arrayConstrucciones: Construccion

    + construir(a: Construccion)
    + pasarTurno()
/'
    + construir(a: Criadero)
    + construir(a: Extractor)
    + construir(a: ReservaDeProduccion)
    + construir(a: Guarida)
    + construir(a: Espiral)
    + expanderMoho()
'/
}

class NexoMineral {
   - vida: int


   + recolectar()
   - initialize()

}

class Pilon {
   - vida: int
   - radio: int

   - initialize()
}

class Asimilador {
   - vida: int

   + recolectar()
   - initialize()

}

class Acceso {
   - vida: int

   - initialize()
}

class PuertoEstelar {
   - vida: int

   - initialize()
}

class Escudo{
   - tamanio: int

   + Escudo(tamanio: int)
   + recargar()
}

Protoss o--"*" PuertoEstelar
Protoss o--"*" NexoMineral
Protoss o--"*" Pilon
Protoss o--"*" Acceso
Protoss o--"*" Asimilador

NexoMineral o--"1" Escudo
Pilon o--"1" Escudo
Asimilador o--"1" Escudo
Acceso o--"1" Escudo
PuertoEstelar o--"1" Escudo

Asimilador ..> GasVespeno
NexoMineral ..> Mineral
PuertoEstelar ..> Acceso

@enduml